refactor(courtManager): 게임 참여자 조회 로직 수정
- teamA/teamB 조회 시 Null 체크 및 findById 호출 수정
- getFreeGameRoundMatchResponse 메서드에 @Transactional(readOnly = true) 적용